[package]
name = "dbench"
version = "0.1.0"
description = "A simple database query benchmarker"
authors = ["Giovanni Berti <dev.giovanniberti@gmail.com>"]
license = "MIT"
repository = "https://github.com/giovanniberti/dbench"
keywords = ["database", "benchmark", "query", "mysql", "postgres"]

[dependencies]
mysql = "8.0.0"
clap = "2.19.2"
time = "0.1"
rpassword = "0.3"
